--- a/mmstyle.css
+++ b/mmstyle.css
@@ -84,7 +84,7 @@ a:hover{
 	color:#FFFFFF;
 }
 #footer {
-  padding-top: 5px;
+  padding-top: 50px;
   padding-bottom: 5px;
 }
 #logo2
@@ -108,3 +108,13 @@ marquee{
 #otext{
 	padding: 0px;
 }
+#bold{
+	font-weight: 500
+}
+
+#oldteam {
+	
+	padding-right: 6px;
+	align:center;	
+}
+	
