--- a/mmstyle.css
+++ b/mmstyle.css
@@ -18,6 +18,7 @@ footer{
 }
 body{
 	font-family:"Arial";
+
 }
 header{
 	background-color:black;
@@ -113,8 +114,23 @@ marquee{
 }
 
 #oldteam {
-	
+
 	padding-right: 6px;
-	align:center;	
+	align:center;
 }
-	
+#robotpic{
+	float: left;
+	background-color:#B0E2FF;
+	position: fixed;
+	left: 45.9px;
+	top: 200px
+}
+#pagehead{
+	float: left;
+	font-weight: 700;
+	font-size: 30px;
+	position: fixed;
+}
+html{
+
+}
