--- a/mmstyle.css
+++ b/mmstyle.css
@@ -119,18 +119,16 @@ marquee{
 	align:center;
 }
 #robotpic{
-	float: left;
+	float: right;
 	background-color:#B0E2FF;
 	position: fixed;
-	left: 45.9px;
-	top: 200px
+	right: 45.9px;
+	top: 120px
+
 }
 #pagehead{
 	float: left;
 	font-weight: 700;
 	font-size: 30px;
 	position: fixed;
-}
-html{
-
 }
